--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.4",
-    "firebase": "^6.0.4"
+    "firebase": "^6.0.4",
+    "replace": "^1.1.0"
   }
 }
