--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.4",
     "firebase": "^6.0.4",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.2.1",
     "replace": "^1.1.0"
   }
